--- a/pravki/index.html
+++ b/pravki/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Jun 08 2025 10:24:21 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jun 09 2025 07:44:00 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6800f7e35fcfd4ca3b3232bc" data-wf-site="6800f7e35fcfd4ca3b323269">
 <head>
   <meta charset="utf-8">
@@ -317,18 +317,88 @@
     </section>
   </header>
   <section>
-    <div class="w-layout-blockcontainer container2 w-container">
+    <div class="w-layout-blockcontainer container2-copy w-container">
       <div data-delay="4000" data-animation="slide" class="slider w-slider" data-autoplay="false" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
-        <div class="w-slider-mask">
-          <div class="w-slide"></div>
-          <div class="w-slide"></div>
-          <div class="w-slide"></div>
+        <div class="mask w-slider-mask">
+          <div class="slide w-slide">
+            <div class="w-layout-vflex flex-block-100">
+              <div class="div-block-35"><img src="images/imgfb.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/imgfb.png 500w, images/imgfb.png 800w, images/imgfb.png 1027w" alt="" class="image-21"></div>
+              <div class="w-layout-vflex flex-block-99">
+                <h2 class="heading-17">ШИРОКИЙ ВЫБОР АВТОЗАПЧАСТЕЙ</h2>
+                <div class="text-block-51">Сотрудничаем только с проверенными поставщиками.Постоянно обновляем ассортимент, чтобы предложить самые лучшие и актуальные детали.</div>
+              </div>
+              <div class="w-layout-hflex flex-block-101">
+                <div class="w-layout-hflex flex-block-102"><img src="images/1.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Быстрая доставка по всей стране</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/2.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Высокое качество продукции</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/3.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Выгодные цены</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/4.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Профессиональная консультация</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-slide">
+            <div class="w-layout-vflex flex-block-100">
+              <div class="div-block-35"><img src="images/imgfb.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/imgfb.png 500w, images/imgfb.png 800w, images/imgfb.png 1027w" alt="" class="image-21"></div>
+              <div class="w-layout-vflex flex-block-99">
+                <h2 class="heading-17">УЗКИЙ ВЫБОР АВТОЗАПЧАСТЕЙ</h2>
+                <div class="text-block-51">Сотрудничаем только с проверенными поставщиками.Постоянно обновляем ассортимент, чтобы предложить самые лучшие и актуальные детали.</div>
+              </div>
+              <div class="w-layout-hflex flex-block-101">
+                <div class="w-layout-hflex flex-block-102"><img src="images/1.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Быстрая доставка по всей стране</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/2.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Высокое качество продукции</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/3.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Выгодные цены</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/4.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Профессиональная консультация</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="w-slide">
+            <div class="w-layout-vflex flex-block-100">
+              <div class="div-block-35"><img src="images/imgfb.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/imgfb.png 500w, images/imgfb.png 800w, images/imgfb.png 1027w" alt="" class="image-21"></div>
+              <div class="w-layout-vflex flex-block-99">
+                <h2 class="heading-17">ЛУЧШИЙ ВЫБОР АВТОЗАПЧАСТЕЙ</h2>
+                <div class="text-block-51">Сотрудничаем только с проверенными поставщиками.Постоянно обновляем ассортимент, чтобы предложить самые лучшие и актуальные детали.</div>
+              </div>
+              <div class="w-layout-hflex flex-block-101">
+                <div class="w-layout-hflex flex-block-102"><img src="images/1.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Быстрая доставка по всей стране</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/2.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Высокое качество продукции</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/3.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Выгодные цены</div>
+                </div>
+                <div class="w-layout-hflex flex-block-102"><img src="images/4.png" loading="lazy" alt="" class="image-20">
+                  <div class="text-block-52">Профессиональная консультация</div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="left-arrow w-slider-arrow-left">
-          <div class="icon-2 w-icon-slider-left"></div>
+          <div class="div-block-34">
+            <div class="icon-2 w-icon-slider-left"></div>
+          </div>
         </div>
         <div class="right-arrow w-slider-arrow-right">
-          <div class="w-icon-slider-right"></div>
+          <div class="div-block-34">
+            <div class="icon-2 w-icon-slider-right"></div>
+          </div>
         </div>
         <div class="slide-nav w-slider-nav w-slider-nav-invert w-round"></div>
       </div>
@@ -338,7 +408,7 @@
     <div class="w-layout-blockcontainer container2 w-container">
       <div class="w-layout-vflex flex-block-5">
         <h2 class="heading-4">Каталоги автозапчастей</h2>
-        <div class="w-layout-hflex flex-block-6">
+        <div class="w-layout-hflex flex-block-6-copy">
           <div class="w-layout-hflex flex-block-24">
             <div class="w-layout-hflex flex-block-25">
               <div class="tab_c">Техническое обслуживание</div>
@@ -572,27 +642,27 @@
           </div>
         </div>
         <div class="w-layout-hflex flex-block-6">
-          <div class="div-block-12">
-            <h1 class="heading-7">Heading</h1>
+          <div id="w-node-bc394713-4b8e-44e3-8ddf-3edc1c31a743-3b3232bc" class="div-block-12">
+            <h1 class="heading-7">Аксессуары</h1><img src="images/IMG_1.png" loading="lazy" alt="" class="image-22">
+          </div>
+          <div class="div-block-12-copy">
+            <h1 class="heading-7">Воздушные фильтры</h1><img src="images/IMG_2.png" loading="lazy" alt="" class="image-22">
           </div>
           <div class="div-block-12">
-            <h1 class="heading-7">Heading</h1>
+            <h1 class="heading-7">Шины</h1><img src="images/IMG_3.png" loading="lazy" alt="" class="image-22">
           </div>
-          <div class="div-block-12">
-            <h1 class="heading-7">Heading</h1>
+          <div class="div-block-123">
+            <h1 class="heading-7-white">Аккумуляторы</h1><img src="images/IMG_4.png" loading="lazy" alt="" class="image-22">
           </div>
-          <div class="div-block-12">
-            <h1 class="heading-7">Heading</h1>
-          </div>
-          <div class="w-layout-hflex flex-block-35">
+          <div id="w-node-_8908a890-8c8f-e12c-999f-08d5da3bcc01-3b3232bc" class="w-layout-hflex flex-block-35">
             <div class="div-block-12 small">
-              <h1 class="heading-7">Heading</h1>
+              <h1 class="heading-7">Диски</h1><img src="images/IMG_5.png" loading="lazy" alt="" class="image-22">
             </div>
             <div class="div-block-12 small">
-              <h1 class="heading-7">Heading</h1>
+              <h1 class="heading-7">Свечи</h1><img src="images/IMG_6.png" loading="lazy" alt="" class="image-22">
             </div>
-            <div class="div-block-12 small">
-              <h1 class="heading-7">Heading</h1>
+            <div class="div-block-red small">
+              <h1 class="heading-7-white">Масла</h1><img src="images/IMG_7.png" loading="lazy" alt="" class="image-22">
             </div>
           </div>
         </div>
@@ -608,7 +678,7 @@
             <div class="text-block-18">Ко всем новостям</div><img src="images/Arrow_right.svg" loading="lazy" alt="">
           </div>
         </div>
-        <div class="w-layout-hflex flex-block-6-copy">
+        <div class="w-layout-hflex flex-block-6-copy-copy">
           <div class="news">
             <h3 class="heading_news">Kia Syros будет выделяться необычным стилем</h3>
             <div class="text-block-20">Компания Kia готова представить новый кроссовер Syros</div>
